crates/widgets/tests/snapshots/snapshots__board_view_two_columns.snap
---
source: crates/widgets/tests/snapshots.rs
expression: out
---
┌ Todo 1 ────────────────────┐┌ Doing 1/2 ─────────────────┐
│┌──────────────────────────┐││┌──────────────────────────┐│
││↑ ● Write widgets         ││││· ○ Hook up event loop    ││
││                          ││││                          ││
││                          ││││                          ││
││                          ││││                          ││
│└──────────────────────────┘││└──────────────────────────┘│
│                            ││                            │
│                            ││                            │
│                            ││                            │
│                            ││                            │
│                            ││                            │
│                            ││                            │
└────────────────────────────┘└────────────────────────────┘
