crates/widgets/tests/snapshots/snapshots__state_column_with_selection.snap
---
source: crates/widgets/tests/snapshots.rs
expression: out
---
┌ In progress 2/3 ───────────┐
│┌──────────────────────────┐│
││! ● First task            ││
││                          ││
││                          ││
││                          ││
│└──────────────────────────┘│
│┌──────────────────────────┐│
││↓ ○ Second task           ││
││                          ││
││                          ││
││                          ││
│└──────────────────────────┘│
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
└────────────────────────────┘
