crates/widgets/tests/snapshots/snapshots__status_bar_insert.snap
---
source: crates/widgets/tests/snapshots.rs
expression: out
---
 INS  kantui › Todo                             0/0 · 10:42
