crates/widgets/tests/snapshots/snapshots__status_bar_normal.snap
---
source: crates/widgets/tests/snapshots.rs
expression: out
---
 NOR  kantui › In progress › Wire up status bar                    4/12 · 10:42
