crates/widgets/tests/snapshots/snapshots__task_card_selected_with_tags.snap
---
source: crates/widgets/tests/snapshots.rs
expression: out
---
┌──────────────────────────────────────┐
│↑ ● Wire up status bar                │
│due 2026-04-20                        │
│#bug #ui                              │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
