crates/widgets/tests/snapshots/snapshots__task_card_unselected_no_due_date.snap
---
source: crates/widgets/tests/snapshots.rs
expression: out
---
┌──────────────────────────────────────┐
│· ○ Draft plan                        │
│                                      │
│                                      │
└──────────────────────────────────────┘
